# ncas-general-cdl-creator-backend

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yaml
src/: main.rs
src/ncas_netcdf/: cdl.rs  common.rs  data_products.rs  deployments.rs  instruments.rs  mod.rs  netcdf_components.rs
